<resources>
    <string name="app_name">LanguageTranslator</string>
    <string name="enter_text">Enter Text</string>
    <string name="translate">Translate</string>
    <string name="todo">TODO</string>
    <string name="need_translation">Need Translation</string>
    <string name="detect_text">Detect Text</string>
    <string name="scan">Scan Image</string>
    <string name="history">History</string>
    <string name="meaning">Meaning</string>
    <string name="word">Word</string>
</resources>