<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        android:elevation="3dp"
        android:layout_height="400dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ScrollView
                android:id="@+id/scroll1"
                android:layout_marginTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <EditText
                    android:id="@+id/sourceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="Enter Text"
                    android:background="@color/white"
                    android:gravity="fill_vertical"
                    android:hint="@string/enter_text"
                    android:inputType="textMultiLine"
                    android:text=""
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp" />

            </ScrollView>


            <ScrollView
                android:id="@+id/scroll2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/scroll1">

                <TextView
                    android:id="@+id/targetText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:textColor="#FF0000"
                    android:textSize="20sp" />
            </ScrollView>

            <ImageButton
                android:id="@+id/speakButton"
                android:layout_marginStart="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/scroll1"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/speaker" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="80dp">

        <Spinner
            android:id="@+id/sourceSpinner"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/translateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sourceSpinner"
            android:layout_marginStart="10dp"
            android:text="@string/translate"
            android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/targetSpinner"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/translateButton"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/resetButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/reset"
            android:scaleType="fitCenter"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/microPhone"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@null"
            android:src="@drawable/mic"
            android:scaleType="fitCenter"
            android:layout_toEndOf="@id/resetButton"
            android:layout_marginStart="80dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/camera"
            android:scaleType="fitCenter"
            android:layout_toEndOf="@id/microPhone"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>



</LinearLayout>